fix:이미지파일 수정

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="row-left">
           <h3>
             <picture>
-              <source srcset="/img/lg.webp" type="image/webp">
-              <img class="logo" src="/img/lg.png" alt="LG CNS 로고">
+              <source srcset="img/lg.webp" type="image/webp">
+              <img class="logo" src="img/lg.png" alt="LG CNS 로고">
             </picture>
           </h3>
           <span class="role">경험디자인 1팀 퍼블리셔</span>
@@ -59,8 +59,8 @@
         <div class="row-left">
           <h3>
             <picture>
-              <source srcset="/img/playtable.webp" type="image/webp">
-              <img class="logo" src="/img/playtable.png" alt="시스템테이블 로고">
+              <source srcset="img/playtable.webp" type="image/webp">
+              <img class="logo" src="img/playtable.png" alt="시스템테이블 로고">
             </picture>
           </h3>
           <span class="role">서비스개발팀</span>
@@ -98,8 +98,8 @@
         <div class="row-left">
           <h3>
             <picture>
-              <source srcset="/img/dever.webp" type="image/webp">
-              <img class="logo" src="/img/dever.png" alt="LG CNS 로고">
+              <source srcset="img/dever.webp" type="image/webp">
+              <img class="logo" src="img/dever.png" alt="영웅노트">
             </picture>
           </h3>
           <span class="role">프론트엔드 개발부서</span>
